fixed centering bug on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -46,11 +46,13 @@ body {
     opacity: 0.9;
     border-bottom: 10px solid;
     line-height: 80px;
+    text-align: center;
 }
 
 #role {
     font-size: 1.5em;
     font-weight: 300;
+    text-align: center;
 }
 
 #releases {
